# simpon_projet5_horagor

./: .env  .env.example  .gitignore  .gitignre  README.md  check_db_status.py  debug_db.py  debug_env.py  debug_page.html  find_tables.py  main.py  page_source.html  pyproject.toml  test_tmdb.py  tutoriel.md
app/: config.py
data/fusioned/: merged_dataset.json
data/matched/: matching_table.json
database/: create_tables.py  seed_gold.py  session.py
database/models/: __init__.py  acteur.py  associations.py  film.py  genre.py  realisateur.py  score.py  societe_production.py
docs/: analyse_projet.md  tutoriel.md
ingestion/: imdb_client.py  kaggle_client.py  rotten_client.py  spark_client.py  tmdb_client.py
pipeline/: gold.py  imdb.py  kaggle.py  main.py  rotten.py  runner.py  spark.py  tmdb.py  tmdb_pipeline.py
processing/cleaning/: run_tmdb_cleaning.py  tmdb_cleaning.py
processing/fusion/: fuser.py  merger.py  run.py  schema.py
processing/gold/: generator.py  run.py
processing/matching/: fuzzy_matcher.py  id_matcher.py  matcher.py  run.py  schema.py  utils.py
processing/normalization/: base.py  imdb_normalizer.py  kaggle_normalizer.py  rotten_normalizer.py  schema.py  tmdb_normalizer.py  utils.py
tests/fusion/: test_fusion.py
tests/imdb/: test_connection.py  test_data_quality.py  test_extract_movies.py  test_movies_directors.py  test_schema.py
tests/kaggle/: test_connection.py  test_dataset_analysis.py  test_exploration_genres.py  test_ingestion.py  test_pipeline_filters.py  test_profile.py
tests/matching/: test_fuzzy_matcher.py  test_utils.py  (+2 more)
(+55 files in other folders)
