[project]
name = "simpon-projet5-horagor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]
