[project]
name = "simpon-projet5-horagor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "selenium>=4.44.0",
    "sqlalchemy>=2.0.50",
    "webdriver-manager>=4.1.1",
]
